# AVC-Ros

./: buckalization_testing.py  bucket_indexing.cpp  bucket_localization.py  buckets.csv  buckets_testing.csv  buckets_testing_testing.csv  rosdepforarguscam  test.py
avc_car/: README.md  avc_car.xml
avc_car/bringup/config/: nav2_params.yaml
avc_car/bringup/launch/: avc_car.launch.py  avc_navigation.launch.py
avc_car/bringup/maps/: bucket_array_to_png.py
avc_car/bringup/scripts/: waypoints.py
avc_car/description/urdf/: avc_car_description.urdf.xacro
avc_car/hardware/include/avc_car/: avc_car_system.hpp
avc_car/test/: test_avc_car_launch.py  test_view_robot_launch.py
ros2_ws/: mappertest.yaml  rvizboxcolors.yaml  wtf.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/avc_car/include/avc_car/avc_car/: SerialTransfer.hpp
ros2_ws/install/avc_car/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: avc_car
ros2_ws/install/avc_car/share/ament_index/resource_index/package_run_dependencies/: avc_car
ros2_ws/install/avc_car/share/ament_index/resource_index/parent_prefix_path/: avc_car
ros2_ws/install/avc_car/share/avc_car/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/avc_car/share/avc_car/cmake/: ament_cmake_export_dependencies-extras.cmake
ros2_ws/install/avc_car/share/avc_car/config/: avc_car_controllers.yaml
ros2_ws/install/avc_car/share/avc_car/launch/: avc_car.launch.py
ros2_ws/install/avc_car/share/avc_car/urdf/: avc_car.urdf.xacro  avc_car_description.urdf.xacro
ros2_ws/install/avc_car_description/share/avc_car_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/abc_avc/avc_car/: CMakeLists.txt  package.xml
ros2_ws/src/abc_avc/avc_car/bringup/config/: avc_car_controllers.yaml  carlikebot_controllers.yaml  ekf_test.yaml  nav2_params.yaml  twist_mux.yaml
ros2_ws/src/abc_avc/avc_car/bringup/launch/: avc_buckalizationAndFriends.launch.py  avc_car.launch.py  avc_car.testlaunch.py  avc_car_ALLslam.launch.py  avc_car_headless.launch.py  avc_car_navAndFriends.launch.py  avc_navigation.launch.py  carlikebot.launch.py  ekf.launch.py  nav_test.launch.py
ros2_ws/src/abc_avc/avc_car/bringup/maps/: bucket_array_to_csv.py  bucket_array_to_png.py  calcd_buckets.csv  map.yaml  maptest.yaml
ros2_ws/src/abc_avc/avc_car/bringup/scripts/: StartNav.py  waypoints.py
ros2_ws/src/abc_avc/avc_car/description/launch/: view_robot.launch.py
ros2_ws/src/abc_avc/avc_car/description/meshes/: reducedmiku.stl
ros2_ws/src/abc_avc/avc_car/description/ros2_control/: avc_car.ros2_control.xacro  carlikebot.ros2_control.xacro
ros2_ws/src/abc_avc/avc_car/description/urdf/: avc_car.materials.xacro  avc_car.urdf.xacro  avc_car_description.urdf.xacro  carlikebot.urdf.xacro
ros2_ws/src/abc_avc/avc_car/doc/: userdoc.rst
ros2_ws/src/abc_avc/avc_car/hardware/: avc_car_system.cpp
ros2_ws/src/abc_avc/avc_car/hardware/include/avc_car/: SerialTransfer.hpp  avc_car_system.hpp  pico_structs.hpp  serial_comms.hpp  serialcomms.hpp  steering_traction.hpp
ros2_ws/src/abc_avc/avc_car/test/: test_avc_car_launch_remapped.py  test_urdf_xacro.py
ros2_ws/src/abc_avc/avc_car_description/: CMakeLists.txt  package.xml
ros2_ws/src/abc_avc/avc_car_localization/: CMakeLists.txt  package.xml
ros2_ws/src/abc_avc/avc_car_localization/config/: ekf.yaml
ros2_ws/src/abc_avc/avc_car_localization/launch/: ekf.launch.py
ros2_ws/src/buckalization/: package.xml  setup.cfg  setup.py
ros2_ws/src/buckalization/buckalization/: buckalization.py  buckalizer_LSD.py
ros2_ws/src/buckalization/data/: buckets.csv  buckets_testing.csv  scoreval_lookups.yaml
ros2_ws/src/isaac_ros_argus_camera/isaac_ros_argus_camera/: package.xml
ros2_ws/src/pose_to_pose_with_covariance-main/: CMakeLists.txt  package.xml
ros2_ws/src/pose_to_pose_with_covariance-main/src/: pose_to_pose_with_covariance.cpp
ros2_ws/src/waypointstarter/: package.xml  setup.cfg  setup.py
ros2_ws/src/waypointstarter/data/: goalstest.yaml  noramp.yaml
ros2_ws/src/waypointstarter/waypointstarter/: __main__.py  waypointstarter.py  waypointstarterbackup.py
