<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avc_car_localization</name>
  <version>0.0.0</version>
  <description>merging odometry sources</description>
ache-2.0</license>

  <author email="claireshen2008a@gmail.com">temp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
